add init w3 handson

--- a/W2_handson/W02_13517053_JesslynNathania.ipynb
+++ b/W2_handson/W02_13517053_JesslynNathania.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4     -11.0  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "[2696983 rows x 7 columns]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "[2673185 rows x 7 columns]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,19 @@
      "text": [
       "(3)  filling those missing values by their corresponding mean values\n",
       "mean of DepDelay: 10.618575625454712 and ArrDelay: 6.7272897311633875 \n",
-      "list of indices which both DepDelay and ArrDelay are null: [650, 651, 2268, 2269, 2597], and more...\n"
+      "(4) number of rows contains missing values after fillna with mean values: 0          False\n",
+      "1          False\n",
+      "2          False\n",
+      "3          False\n",
+      "4          False\n",
+      "           ...  \n",
+      "2719413    False\n",
+      "2719414    False\n",
+      "2719415    False\n",
+      "2719416    False\n",
+      "2719417    False\n",
+      "Length: 2696983, dtype: bool\n",
+      "list of indices from init data which both DepDelay and ArrDelay are null: [650, 651, 2268, 2269, 2597], and more...\n"
      ]
     },
     {
@@ -606,7 +618,7 @@
        "Name: 650, dtype: object"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +627,9 @@
     "print(\"(3)  filling those missing values by their corresponding mean values\")\n",
     "df_miss2 = df_no_dup.fillna({\"DepDelay\": df_no_dup.DepDelay.mean(), \"ArrDelay\": df_no_dup.ArrDelay.mean()})\n",
     "print(\"mean of DepDelay: {} and ArrDelay: {} \".format(df_no_dup.DepDelay.mean(), df_no_dup.ArrDelay.mean()))\n",
-    "print(\"list of indices which both DepDelay and ArrDelay are null: {}, and more...\"\n",
+    "print(\"(4) number of rows contains missing values after fillna with mean values: {}\"\n",
+    "      .format(df_miss2.DepDelay.isnull() | df_miss2.ArrDelay.isnull()))\n",
+    "print(\"list of indices from init data which both DepDelay and ArrDelay are null: {}, and more...\"\n",
     "      .format(list(df_no_dup[df_no_dup.DepDelay.isnull() & df_no_dup.ArrDelay.isnull()].index)[0:5]))\n",
     "df_miss2.loc[650]"
    ]
@@ -648,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +841,7 @@
        "[2673185 rows x 7 columns]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1061,7 @@
        "[2673185 rows x 7 columns]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,12 +1086,12 @@
     "## M05\n",
     "In raw data, there may be outliers and they should be removed before we use our data to our learning model. There are several approaches and one of them is by using Interquartile Range (IQR). The IQR can be used to identify outliers by defining limits on the sample values that are: (i) a factor $k$ of the IQR **below** the 25th percentile (Q1), **or** (ii) a factor $k$ of the IQR **above** the 75th percentile (Q3). The common value for the factor $k$ is the value 1.5 (thus, the outliers condition is below $(Q1 - 1.5 * IQR)$ or above $(Q3 + 1.5 * IQR)$). A factor $k$ of 3 or more can be used to identify values that are extreme outliers (far outs).\n",
     "\n",
-    "In M05, use the column ```ArrDelay``` to filter out the outliers data with $k=1.5$ and one more $k$ value you think it's a good value to filter out the outliers. Please also: (i) print the value of $Q1, Q2, IQR, (Q1 - k * IQR), (Q3 + k * IQR)$ and <font color='red'>(ii) count how many outliers you successfully remove by using $k=1.5$ and the other $k$ you choose</font>."
+    "In M05, use the column ```ArrDelay``` to filter out the outliers data with $k=1.5$ and one more $k$ value you think it's a good value to filter out the outliers. Please also: (i) print the value of $Q1, Q2, IQR, (Q1 - k * IQR), (Q3 + k * IQR)$ and (ii) count how many outliers you successfully remove by using $k=1.5$ and the other $k$ you choose."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
