--- a/W3_handson/W03_13517053_JesslynNathania.ipynb
+++ b/W3_handson/W03_13517053_JesslynNathania.ipynb
@@ -405,7 +405,7 @@
     "\n",
     "2. *Count Vectorizer*\n",
     "<br>\n",
-    "Mengubah teks ke matriks mengandung nilai jumlah token. Output berupa nilai 0 atau 1. 1 menunjukkan bermakna dan 0 sebaliknya."
+    "Mengubah teks ke matriks mengandung nilai jumlah token dalam dokumen."
    ]
   }
  ],
