--- a/W9_handson/W09_your-student-id_your-name.ipynb
+++ b/W9_handson/W09_your-student-id_your-name.ipynb
@@ -67,9 +67,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dsdm",
+   "display_name": "global_venv",
    "language": "python",
-   "name": "dsdm"
+   "name": "global_venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -81,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
